--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <h1>Demos:</h1>
   <ul>
     <li><a href="show-current-location-on-map.html">Mostrar a localização do usuário no map</a></li>
+    <li><a href="select-location-on-map.html">Selecionar um local no mapa</a></li>
   </ul>
 
 </body>
