feat: Add check-if-point-is-inside-a-polygon.html

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
   <h1>Demos:</h1>
   <ul>
-    <li><a href="show-current-location-on-map.html">Mostrar a localização do usuário no map</a></li>
     <li><a href="select-location-on-map.html">Selecionar um local no mapa</a></li>
+    <li><a href="show-current-location-on-map.html">Mostrar a localização do usuário no map</a></li>
+    <li><a href="check-if-point-is-inside-a-polygon.html">Checar se um ponto está dentro de uma área</a></li>
   </ul>
 
 </body>
