--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <li><a href="select-location-on-map.html">Selecionar um local no mapa</a></li>
     <li><a href="show-current-location-on-map.html">Mostrar a localização do usuário no map</a></li>
     <li><a href="check-if-point-is-inside-a-polygon.html">Checar se um ponto está dentro de uma área</a></li>
+    <li><a href="convert-distance-into-price.html">Calcular preço de uma entrega</a></li>
   </ul>
 
 </body>
