--- a/convert-distance-into-price.html
+++ b/convert-distance-into-price.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Convert distnce into price</title>
+  <title>Convert distance into price</title>
 
   <script src='https://api.mapbox.com/mapbox-gl-js/v2.0.1/mapbox-gl.js'></script>
   <script src="https://npmcdn.com/@turf/turf@5.1.6/turf.min.js"></script>
@@ -30,7 +30,7 @@
   <p id="result"></p>
 
   <script>
-    mapboxgl.accessToken = 'pk.eyJ1IjoiaWFnb2JydW5vIiwiYSI6ImNram41eW1zMjB6M3MyeXA0a2toeW92ZHgifQ.7osICa5BZAai0RyybBpiLQ';
+      mapboxgl.accessToken = 'pk.eyJ1IjoiaWFnb2JydW5vIiwiYSI6ImNram41cDI1bjBhYWEyeXFscGp5ZG15bnAifQ.kGQsH0C6Li7MwXrOWr1Qmw';
 
     const carnaubalLatLng = new mapboxgl.LngLat(-40.941498, -4.162548);
 
@@ -57,6 +57,7 @@
 
     map.on('click', function (event) {
       pointB = new mapboxgl.LngLat(event.lngLat.lng, event.lngLat.lat);
+
       showMarkerOnMap(event.lngLat);
       calcPriceFromPointAToPointB();
     });
@@ -65,16 +66,18 @@
       markerB.setLngLat(lngLat).addTo(map);
     }
 
-    const meterPrice = 0.0025;
-    const maxPrice = 4;
-    const minPrice = 1;
-    const currencyFormater = new Intl.NumberFormat('pt-BR', { style: 'currency', currency: 'BRL' });
+    const meterPrice = 0.002;
+    const maxPrice = 5;
+    const minPrice = 0.50;
+    const currencyFormatter = new Intl.NumberFormat('pt-BR', { style: 'currency', currency: 'BRL' });
 
     function calcPriceFromPointAToPointB() {
-      const distanceInMiles = turf.distance(pointA.toArray(), pointB.toArray(), {
-        units: 'miles'
-      });
-      const distanceInMeters = getMeters(distanceInMiles);
+      const distanceInMiles = turf.distance(
+        pointA.toArray(),
+        pointB.toArray(),
+        { units: 'miles' }
+      );
+      const distanceInMeters = convertMilesToMeters(distanceInMiles);
 
       let price = meterPrice * distanceInMeters;
       price = Math.round(price);
@@ -82,12 +85,12 @@
 
       resultEl.innerHTML = `
         Distância: ${prettyPrintNumber(Math.floor(distanceInMeters))} metros<br>
-        Preço da entrega = ${currencyFormater.format(price)}
+        Preço da entrega = ${currencyFormatter.format(price)}
       `;
     }
 
-    function getMeters(i) {
-      return i * 1609.344;
+    function convertMilesToMeters(n) {
+      return n * 1609.344;
     }
 
     function prettyPrintNumber(number) {
