--- a/show-current-location-on-map.html
+++ b/show-current-location-on-map.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-  <h1>Mostrar a localização atual do usuário no mapa:</h1>
+  <h1>Mostra a localização atual do usuário no mapa:</h1>
   <div id="map-container"></div>
 
   <script>
