--- a/check-if-point-is-inside-coverade-area.html
+++ b/check-if-point-is-inside-coverade-area.html
@@ -59,7 +59,7 @@
     map.on('load', function (event) {
       for (const meters in areas) {
         const deliveryFee = areas[meters];
-        drawCircle(meters);
+        drawCircle(Number(meters));
       }
     })
 
@@ -75,28 +75,34 @@
     }
 
     function drawCircle(radiusInMeters) {
-      const center = carnaubalLatLng.toArray();
+      const center = carnaubalLatLng;
       const radiusInKilometers = radiusInMeters / 1000
 
-      const circle = turf.circle(center, radiusInKilometers, {
+      const circle = turf.circle(center.toArray(), radiusInKilometers, {
         units: 'kilometers',
       });
 
-      const sourceId = 'circleData-' + Date.now()
-      map.addSource(sourceId, {
-        type: "geojson",
-        data: circle
-      });
       map.addLayer({
-        id: "circle-fill_" + sourceId,
+        id: "circle-fill_" + Date.now(),
         type: "fill",
-        source: sourceId,
+        source: {
+          type: "geojson",
+          data: circle
+        },
         paint: {
           "fill-color": "red",
           "fill-opacity": 0.1,
           "fill-outline-color": '#000',
         }
       });
+
+      // Mostrar o raio do circulo
+      const el = document.createElement('div');
+      const text = document.createElement('div');
+      text.textContent = radiusInMeters < 1000 ? `${radiusInMeters} M` : `${radiusInMeters / 1000} KM`;
+      text.style = `opacity:0.6; color:red; font-weight:600; transform:rotate(-90deg);`
+      el.appendChild(text);
+      new mapboxgl.Marker(el).setLngLat(destination(center, -90, radiusInMeters)).addTo(map);
     }
 
     function calcPriceFromCenterToPointB() {
@@ -125,6 +131,28 @@
 
     function prettyPrintNumber(number) {
       return number.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ".");
+    }
+
+    // From https://github.com/makinacorpus/Leaflet.GeometryUtil/blob/master/src/leaflet.geometryutil.js#L713
+    function destination(latlng, heading, distance) {
+      heading = (heading + 360) % 360;
+      var rad = Math.PI / 180,
+          radInv = 180 / Math.PI,
+          R = 6378137, // approximation of Earth's radius
+          lon1 = latlng.lng * rad,
+          lat1 = latlng.lat * rad,
+          rheading = heading * rad,
+          sinLat1 = Math.sin(lat1),
+          cosLat1 = Math.cos(lat1),
+          cosDistR = Math.cos(distance / R),
+          sinDistR = Math.sin(distance / R),
+          lat2 = Math.asin(sinLat1 * cosDistR + cosLat1 *
+              sinDistR * Math.cos(rheading)),
+          lon2 = lon1 + Math.atan2(Math.sin(rheading) * sinDistR *
+              cosLat1, cosDistR - sinLat1 * Math.sin(lat2));
+      lon2 = lon2 * radInv;
+      lon2 = lon2 > 180 ? lon2 - 360 : lon2 < -180 ? lon2 + 360 : lon2;
+      return new mapboxgl.LngLat(lon2, lat2 * radInv);
     }
   </script>
 
